; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_workarounds.c_skl_whitelist_build.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_workarounds.c_skl_whitelist_build.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_engine_cs = type { i64, %struct.i915_wa_list }
%struct.i915_wa_list = type { i32 }

@RENDER_CLASS = common dso_local global i64 0, align 8
@GEN8_L3SQCREG4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_engine_cs*)* @skl_whitelist_build to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skl_whitelist_build(%struct.intel_engine_cs* %0) #0 {
  %2 = alloca %struct.intel_engine_cs*, align 8
  %3 = alloca %struct.i915_wa_list*, align 8
  store %struct.intel_engine_cs* %0, %struct.intel_engine_cs** %2, align 8
  %4 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %5 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %4, i32 0, i32 1
  store %struct.i915_wa_list* %5, %struct.i915_wa_list** %3, align 8
  %6 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %7 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @RENDER_CLASS, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %18

12:                                               ; preds = %1
  %13 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %14 = call i32 @gen9_whitelist_build(%struct.i915_wa_list* %13)
  %15 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %16 = load i32, i32* @GEN8_L3SQCREG4, align 4
  %17 = call i32 @whitelist_reg(%struct.i915_wa_list* %15, i32 %16)
  br label %18

18:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @gen9_whitelist_build(%struct.i915_wa_list*) #1

declare dso_local i32 @whitelist_reg(%struct.i915_wa_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
